welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: value update is not a member of String
	if (litMessage()="R") {
            ^BDRBuggle:8: error: value update is not a member of String
}else if(litMessage()="L") {
         ^BDRBuggle:11: error: value update is not a member of String
}else if(litMessage()="I") {
         ^BDRBuggle:15: error: value update is not a member of String
}else if (litMessage()="A") {
          ^BDRBuggle:17: error: value update is not a member of String
}else if (litMessage()="B") {
          ^BDRBuggle:20: error: value update is not a member of String
}else if (litMessage()="C") {
          ^BDRBuggle:24: error: value update is not a member of String
}else if(litMessage()="Z") {
         ^BDRBuggle:26: error: value update is not a member of String
}else if (litMessage()="Y"){
          ^BDRBuggle:29: error: value update is not a member of String
}else if(litMessage()="X"){
         ^